# restaurantAgent

./: .env.example  .gitignore  README.md  agent.py  composio_calendar.py  memory_store.py  models.py  ophelia_agent_memory.db  ophelia_client.py  pyproject.toml  requirements.txt  server.py
utils/: logger.py  middleware.py
