[project]
name = "opheliaLLM"
version = "0.1.0"
description = "Direct REST Ophelia booking agent MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "composio>=0.8.0",
    "composio-langgraph>=0.8.0",
    "dateparser>=1.2.0",
    "httpx>=0.28.0",
    "langchain>=1.3.2",
    "langchain-groq>=1.1.2",
    "langgraph>=1.2.2",
    "python-dotenv>=1.2.2",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["utils*"]
